# ShindenToAnilist

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.MD  README.md  ShindenToAnilist.sln  Taskfile.yml  appservice.go  buf.gen.yaml  buf.yaml  driver.go  go.mod  go.sum  leaked-api.sh  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.base.mjs  prettier.config.mjs  rustfmt.toml  svelte.config.js  tsconfig.base.json  vite.config.ts
.github/workflows/: attach-release-assets.yml  go.yml  production-builds.yml
ShindenToAnilist/: .gitignore  AirStatus.cs  AnimeDatabase.cs  AnimeListConverter.cs  AnimeType.cs  DataAnime.cs  HtmlContext.cs  IHtmlContext.cs  ScreamingNamePolicy.cs  ShindenAnime.cs  ShindenAnimeDetails.cs  ShindenToAnilist.cs  ShindenToAnilist.csproj  WatchStatus.cs  app.go  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  revive.toml  vite.config.ts  wails.json
ShindenToAnilist.Cli/: Program.cs  ShindenToAnilist.Cli.csproj
ShindenToAnilist/frontend/: .prettierrc  index.html  package-lock.json  package.json  package.json.md5  tailwind.config.cjs  vite.config.js
ShindenToAnilist/frontend/src/: App.svelte  app.css
ShindenToAnilist/lib/: data.go
ShindenToAnilist/lib/animezone/: animezone.go
ShindenToAnilist/lib/converter/: converter.go
ShindenToAnilist/lib/db/: db.go
ShindenToAnilist/lib/searcher/: searcher.go
ShindenToAnilist/lib/shinden/: shinden.go
ShindenToAnilist/lib/tests/: full_test.go  lista_anime.xml
ShindenToAnilist/src-tauri/: Cargo.toml  tauri.conf.json
ShindenToAnilist/src-tauri/.cargo/: config.toml
ShindenToAnilist/src-tauri/src/: converter.rs  lib.rs  main.rs  tests.rs  utils.rs
ShindenToAnilist/src/routes/: +page.svelte  catppuccinTheme.mocha.ts
assets/: sta_icon.psd
bruno/: folder.yml
bruno/ShindenToAnilist/: Check Database Update.yml  Download Database.yml  Fetch Shinden List.yml  Get Database Entries.yml  Get Database Full.yml  Get Database Metadata.yml  Get Loaded Shinden List.yml  Get Shinden Entries.yml  Get Shinden Full.yml  Get Shinden Ids (Sort by urgency).yml  Get Shinden Ids.yml  Load Database.yml  opencollection.yml
crates/shinden-to-anilist-core/: .gitignore  Cargo.toml
crates/shinden-to-anilist-core/ANIMEZONE/: user-JestemOtaku-plans.html  user-JestemOtaku-rated.html  user-JestemOtaku-watching.html
crates/shinden-to-anilist-driver/: Cargo.toml  cbindgen.toml
crates/shinden-to-anilist-grpc/: Cargo.toml  build.rs
crates/shinden-to-anilist-grpc/src/: cloudflare.rs  error.rs  export.rs  grpc.rs  http.rs  lib.rs  main.rs  mapper.rs  matching.rs  server.rs  source.rs
crates/shinden-to-anilist-grpc/src/server/: database.rs  matching.rs  mod.rs  source.rs  streaming.rs
crates/shinden-to-anilist-grpc/src/server/providers/: animezone.rs  direct.rs  mod.rs  ogladajanime.rs  scraped.rs  shinden.rs
electron/: package.json  tsconfig.json
electron/src/: main.ts  preload.cts  shindenCloudflare.ts
examples/: optimize_matcher.rs  searching.rs  update_offline_database.rs  update_offline_database_zst.rs  xml_exporter.rs
examples/go/: README.md
frontend/: .prettierignore  index.html  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  catppuccinTheme.mocha.ts  main.ts  vite-env.d.ts
internal/anime/: models.go
internal/appsvc/: service.go  service_test.go
internal/stadriver/: driver.go
scripts/: clean-dir.mjs  generate-icons.mjs  generate-tauri-icons.mjs  package-system-electron.mjs  stage-sidecar.mjs  stage-tauri-appimage.mjs  stage-tauri-linux.mjs  stage-tauri-windows.mjs  stage-tauri-xwin.mjs
shinden-to-anilist-core/: .gitignore  Cargo.toml
shinden-to-anilist-core/examples/: load_mmap_database.rs  match_fuzzy_query.rs  request_shinden.rs  searching.rs
shinden-to-anilist-core/src/: converter.rs  lib.rs  ngram.rs  utils.rs
shinden-to-anilist-core/src/converter/: common.rs  database.rs  exporter.rs  extractor.rs  matcher.rs  searcher.rs
shinden-to-anilist-core/src/converter/database/: json.rs  models.rs  tests.rs
shinden-to-anilist-core/src/converter/exporter/: tests.rs  xml.rs
shinden-to-anilist-core/src/converter/providers/: shinden.rs
shinden-to-anilist-core/src/converter/providers/shinden/: json.rs  models.rs
shinden-to-anilist-core/src/converter/searcher/: tests.rs
src/: app.css  app.html  lib.rs  ngram.rs  utils.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/shinden-to-anilist-core/: Cargo.toml
src-tauri/shinden-to-anilist-core/src/: converter.rs  lib.rs  ngram.rs  tests.rs  utils.rs
src-tauri/shinden-to-anilist-core/src/converter/: common.rs  database.rs  exporter.rs  matcher.rs  regexes.rs  searcher.rs  shinden.rs  view.rs
src-tauri/shinden-to-anilist-core/src/converter/database/: json.rs  models.rs  tests.rs
src-tauri/shinden-to-anilist-core/src/converter/exporter/: xml.rs
src-tauri/shinden-to-anilist-core/src/converter/providers/: shinden.rs
src-tauri/shinden-to-anilist-core/src/converter/providers/shinden/: json.rs  models.rs
src-tauri/shinden-to-anilist-core/src/converter/searcher/: tests.rs
src-tauri/shinden-to-anilist-engine/: Cargo.toml
src-tauri/shinden-to-anilist-engine/src/: converter.rs  ngram.rs  tests.rs  utils.rs
src-tauri/shinden-to-anilist-engine/src/converter/: database.rs  exporter.rs  matcher.rs  searcher.rs  shinden.rs
src-tauri/src/: converter.rs  lib.rs  main.rs  ngram.rs  tests.rs  utils.rs
src-tauri/src/converter/: database.rs  matcher.rs  regexes.rs  searcher.rs  shinden.rs
src/converter/: common.rs  database.rs  exporter.rs  extractor.rs  matcher.rs  searcher.rs
src/routes/: +page.svelte  layout.css
tauri/: Cargo.toml  package.json  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: dto.rs  lib.rs  main.rs  state.rs
tauri/src/commands/: browser_session.rs  database.rs  export.rs  matching.rs  mod.rs  paths.rs  shinden.rs  source.rs
(+152 files in other folders)
