[package]
name = "shinden-to-anilist-core"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[lib]
crate-type = ["lib"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
ambassador = "0.5"
approx = "0.5"
bon = "3.9"
chrono = { version = "0.4", features = ["serde"] }
compact_str = { version = "0.9", features = ["serde"] }
indexmap = { version = "2.13", features = ["serde", "rayon"] }
itertools = "0.14"
lazy-regex = "3.6"
memmap2 = "0.9"
ordered-float = "5.1"
rayon = "1.11"
reqwest = { version = "0.13", features = ["json"] }
roaring = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.50", features = ["macros"] }
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
wana_kana = "4.0"

[dev-dependencies]
egobox-ego = "0.37"
mimalloc = { version = "0.1", features = ["v3"] }
ndarray = "0.16"
