[package]
name = "shinden-to-anilist-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
ambassador = "0.5"
async-trait = "0.1"
bon = "3"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde", "rayon"] }
itertools = "0.14"
memmap2 = "0.9"
ordered-float = { version = "5", features = ["serde"] }
rayon = "1"
regex = "1"
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "zstd", "deflate"] }
roaring = { version = "0.11", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde-xml-rs = "0.8"
serde_json = "1"
smallvec = { version = "1", features = ["serde"] }
strsim = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
unicode-normalization = "0.1"
unicode-segmentation = "1"
url = { version = "2", features = ["serde"] }
wana_kana = "4"

[dev-dependencies]
egobox-ego = "0.36"
eyre = "0.6"
ratatui = "0.30"
simple-eyre = "0.3.1"