[package]
name = "shinden-to-anilist-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
ambassador = "0.5"
approx = "0.5"
bon = "3"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde", "rayon"] }
itertools = "0.14"
memmap2 = "0.9"
ordered-float = "5"
rayon = "1"
regex = "1"
reqwest = { version = "0.13", features = ["json"] }
roaring = { version = "0.11", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.8"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros"] }
unicode-normalization = "0.1"
unicode-segmentation = "1"
wana_kana = "4"
rapidfuzz = "0.5"
compact_str = { version = "0.9", features = ["serde"] }

[dev-dependencies]
egobox-ego = "0.36"
ndarray = "0.16"
mimalloc = { version = "0.1", features = ["v3"] }
