[package]
name = "shinden-to-anilist-core"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[lib]
crate-type = ["lib"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
ambassador = "0.5"
approx = "0.5"
bon = "3.9"
chrono = { version = "0.4", features = ["serde"] }
compact_str = { version = "0.9", features = ["serde"] }
indexmap = { version = "2.14", features = ["rayon", "serde"] }
itertools = "0.14"
lazy-regex = "3.6"
memmap2 = "0.9"
ordered-float = "5.3"
quick-xml = { version = "0.40", features = ["serde-types", "serialize"] }
rayon = "1.12"
reqwest = { version = "0.13", features = ["json"] }
roaring = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros"] }
unicode-normalization = "0.1"
unicode-segmentation = "1.13"
wana_kana = "5.0"
zstd = "0.13"

[dev-dependencies]
egobox-ego = "0.38"
mimalloc = { version = "0.1" }
ndarray = "0.16"

[profile.release]
lto = "thin"
