[package]
name = "shinden-to-anilist"
version = "0.1.0"
description = "Konwerter listy Shinden na Anilist"
authors = ["Kacper Kondracki"]
edition = "2024"

[lib]
name = "shinden_to_anilist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
resolver = "3"
members = ["shinden-to-anilist-core"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shinden-to-anilist-core = { path = "shinden-to-anilist-core" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
eyre = { version = "0.6", features = ["auto-install"] }
mimalloc = { version = "0.1", features = ["v3"] }

[profile.test]
opt-level = 1
