[package]
name = "shinden-to-anilist"
version = "0.1.0"
description = "Konwerter listy Shinden na Anilist"
authors = ["Kacper Kondracki"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "shinden_to_anilist_lib"

[dependencies]
eyre = { version = "0.6", features = ["auto-install"] }
mimalloc = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
shinden-to-anilist-core = { path = "../shinden-to-anilist-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = "thin"
