[package]
name = "shinden-to-anilist-tauri"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[lib]
name = "shinden_to_anilist_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
reqwest = "0.13"
serde = { version = "1.0", features = ["derive"] }
shinden-to-anilist-grpc = { path = "../crates/shinden-to-anilist-grpc" }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio-util = "0.7"
tonic = "0.14"
