[package]
name = "shinden-to-anilist-tauri"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "shinden_to_anilist_tauri"

[dependencies]
reqwest = { version = "0.13", features = ["brotli", "cookies", "deflate", "gzip", "zstd"] }
serde = { version = "1.0", features = ["derive"] }
shinden-to-anilist-grpc = { path = "../crates/shinden-to-anilist-grpc" }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio-util = "0.7"
tonic = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
