[package]
name = "shinden-to-anilist-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9"
prost = "0.14"
rayon = "1.12"
reqwest = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shinden-to-anilist-core = { path = "../shinden-to-anilist-core" }
tap = "1.0.1"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tonic-web = "0.14"
tonic-prost = "0.14"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
tonic-prost-build = "0.14"
