[package]
name = "shinden-to-anilist-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde-xml-rs = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "zstd", "deflate"] }
itertools = "0.14"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
strsim = "0.11"
mimalloc = { version = "0.1", features = ["v3"] }
ahash = { version = "0.8", features = ["serde"] }
ordered-float = { version = "5", features = ["serde"] }
roaring = { version = "0.11", features = ["serde"] }
unicode-normalization = "0.1"
unicode-segmentation = "1"
regex = "1"
smallvec = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde", "rayon"] }
wana_kana = "4"
ambassador = "0.5"
url = { version = "2", features = ["serde"] }
memmap2 = "0.9"
thiserror = "2"
bon = "3"

[dev-dependencies]
egobox-ego = "0.36"
ratatui = "0.30"
eyre = "0.6"
simple-eyre = "0.3.1"