[package]
name = "shinden-to-anilist-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "zstd", "deflate"] }
itertools = "0.14"
chrono = { version = "0.4", features = ["serde"] }
eyre = { version = "0.6", features = ["auto-install"] }
rayon = "1"
strsim = "0.11"
mimalloc = { version = "0.1", features = ["v3"] }
ahash = { version = "0.8", features = ["serde"] }
ordered-float = { version = "5", features = ["serde"] }
roaring = { version = "0.11", features = ["serde"] }
unicode-normalization = "0.1"
regex = "1"
smol_str = { version = "0.3", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde", "rayon"] }

[dev-dependencies]
egobox-ego = "0.35"
ndarray = "0.16"
owo-colors = "4"
